# vnsee

./: .clang-tidy  .editorconfig  .gitmodules  BUILD.md  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE.md  README.md  TODO.md  USAGE.md  client.c  defs.h  image.pbm  instructions.md  server.c  vnsee-gui
.github/: FUNDING.yml
docs/: build.md  linux-x11.md
docs/second-screen/: linux-sway.md  linux-wayland.md  linux-x11.md
media/: Makefile  base.tex  build.sh  button-home.tex  button-power.tex  common.tex  home.tex  logo.tex  pen.tex  power.tex  remarkable.tex  scroll-x.tex  scroll-y.tex  setup.tex  tap.tex
src/: client-input.cpp  client-screen.cpp  client.cpp  client.hpp  config.hpp.in  defs.h  input.cpp  input.hpp  log.hpp  log.tpp  main.c  main.cpp  mxcfb.h  mxcfb.hpp  options.hpp  refresh.c  screen.c  screen.cpp  screen.h  screen.hpp  util.c  util.h
src/app/: buttons.cpp  buttons.hpp  client.cpp  client.hpp  event_loop.hpp  pen.cpp  pen.hpp  screen.cpp  screen.hpp  touch.cpp  touch.hpp
src/rmioc/: buttons.cpp  buttons.hpp  device.cpp  device.hpp  file.cpp  file.hpp  flags.hpp  input.cpp  input.hpp  mxcfb.cpp  mxcfb.hpp  pen.cpp  pen.hpp  screen.cpp  screen.hpp  screen_mxcfb.cpp  screen_mxcfb.hpp  screen_rm2fb.cpp  screen_rm2fb.hpp  touch.cpp  touch.hpp
